--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -238,6 +238,12 @@
         "wrap-iife": [
             "error",
             "inside"
+        ],
+        "camelcase": [
+            "error",
+            {
+                "properties": "always"
+            }
         ]
     }
 }
